--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movie-time",
+  "name": "dnd-character-sheet",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -21,6 +21,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-get-random-values": "~1.7.0",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
     "uuid": "^8.3.2"
@@ -31,8 +32,8 @@
     "@testing-library/react-native": "^9.0.0",
     "jest": "^26.6.3",
     "jest-expo": "^44.0.1",
-    "react-test-renderer": "^17.0.2",
-    "react-native-safe-area-context": "^3.3.2"
+    "react-native-safe-area-context": "^3.3.2",
+    "react-test-renderer": "^17.0.2"
   },
   "private": true,
   "jest": {
